# Kairo

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  package.json  pitch_script.md  pnpm-lock.yaml  tsconfig.base.json  tweet.md
agents/steward/: package.json
agents/steward/src/: index.ts
apps/mcp/: README.md  package.json
apps/mcp/src/: index.ts
apps/web/: .env.example  next.config.mjs  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/app/aomi/: page.tsx
apps/web/app/api/arena/: route.ts
apps/web/app/api/proposals/: route.ts
apps/web/app/api/stats/: route.ts
apps/web/app/app/: page.tsx
apps/web/app/app/chat/: page.tsx
apps/web/app/arena/: page.tsx
apps/web/app/demo/: page.tsx
apps/web/components/: AomiRunToolPanel.tsx  AppShell.tsx  ConnectGate.tsx  OnChainPolicyBadge.tsx  PolicyTextInput.tsx  PositionsPanel.tsx  StatusBadge.tsx  aomi-frame.tsx  default.css  logo.tsx  runtime-tx-handler.tsx
apps/web/components/aomi-auth-adapter/: context.tsx  identity.ts  runtime-user-sync.tsx  types.ts
apps/web/components/assistant-ui/: thread-list.tsx  thread.tsx  threadlist-sidebar.tsx  tool-fallback.tsx
apps/web/components/control-bar/: app-metadata.ts  app-select.tsx  connect-button.tsx  model-metadata.ts  model-select.tsx  network-select.tsx
apps/web/components/icons/: app-map.tsx  auto-mode.tsx  chain-map.tsx  index.ts  vendor-map.tsx
apps/web/lib/: aomi-auth-adapter.ts  contracts.ts  storage.ts  utils.ts  viem.ts  wagmi.ts
apps/web/lib/demo-fixtures/: scenario-a.json  scenario-b.json  scenario-c.json
apps/web/pages/: _document.tsx
apps/web/prisma/: schema.prisma
apps/web/public/: manifest.webmanifest
contracts/: .env.example  README.md  foundry.toml
contracts/broadcast/Deploy.s.sol/84532/: run-latest.json
contracts/cache/: solidity-files-cache.json
contracts/script/: Deploy.s.sol
contracts/src/: KairoPolicy.sol
contracts/test/: AgentIdHash.t.sol  KairoPolicy.t.sol
docs/: ARCHITECTURE.md  BRAND.md  HOWTO.md  PRODUCT.md  ROADMAP.md
docs/evidence/: aomi-plugin-manifest.json  aomi-plugin-manifest.json.txt  aomi-runtime-test-output.txt
plugins/aerodrome/: Cargo.toml  README.md
plugins/aerodrome/examples/: run_tool.rs
plugins/aerodrome/src/: client.rs  lib.rs  tool.rs
plugins/aerodrome/tests/: integration.rs  test_runtime.rs
scripts/: rogue-steward.ts  seed-demo-receipts.ts  smoke-aerodrome.ts  smoke-api.ts
(+17 files in other folders)
