[package]
name = "kairo-aerodrome"
description = "Kairo Aerodrome plugin — a typed-tools layer for autonomous LP management on Base, gated by the Kairo policy engine."
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
aomi-sdk = { workspace = true }
reqwest = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
