[package]
name = "kairo-aerodrome"
description = "Kairo Aerodrome plugin — a typed-tools layer for autonomous LP management on Base, gated by the Kairo policy engine."
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
# `cdylib` is what the Aomi runtime hot-loads. `rlib` lets integration tests
# import the crate's public modules through Rust's normal linker.
crate-type = ["cdylib", "rlib"]

[dependencies]
aomi-sdk = { workspace = true }
reqwest = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
